deepen all blog content; fix CI workflows for Hugo v0.162.1 + Stack theme; resolve merge conflicts